--- a/week 3/week 1/project/index.html
+++ b/week 3/week 1/project/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>welcome to my site my name is arsham im from iran and i live kerman</h1>
+    <h1>welcome to my site</h1>
+    <h1>name and last name : arsham sheikhakbari</h1>
+    <h1>age : 15</h1>
+    <h1>country : iran</h1>
+    <h1>about : my name is arsham i live in iran and im from kerman</h1>
     <img src="unnamed.png">
 </head>
 </body>
