--- a/week 11/s1/project/index.html
+++ b/week 11/s1/project/index.html
@@ -13,14 +13,22 @@
 </head>
 <body>
     <div class="gg"> 
-        <p id="bu">bot&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsphuman</p>
+        <p id="bu">Bot&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbspHuman</p>
         <p id="score">0:0</p>
         <div id="buttons">
-        <button id="rock">rock</button>
-        <button id="paper">paper</button>
-        <button id="scissors">scissors</button>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
         </div>
-        <button id="reset">reset</button>
+        <button id="reset">Reset</button>
+    </div>
+    <div class="cho">
+        <p id="hc">
+            Human :
+        </p>
+        <p id="bc">
+            Bot :
+        </p>
     </div>
     
     <script src="js/app.js"></script>
