--- a/week 11/s1/project/index.html
+++ b/week 11/s1/project/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="gg"> 
-        <p id="bu">Bot&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbspHuman</p>
+        <p id="bu">Human&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbspBot</p>
         <p id="score">0:0</p>
         <div id="buttons">
         <button id="rock">Rock</button>
