--- a/all/cournometr/index.html
+++ b/all/cournometr/index.html
@@ -11,7 +11,7 @@
     <title>Timer</title>
 </head>
 <body>
-    <div class="div1">
+    <div class="container">
     <p id="timer">0:0:0:00</p>
     <button id="start">start</button>
     <button id="stop">stop</button>
