--- a/all/temp converter/index.html
+++ b/all/temp converter/index.html
@@ -19,7 +19,7 @@
         <div class="kelvin">
             <input type="number" id="kelvin" placeholder="kelvin...">
         </div>
-    </div
+    </div>
     <script src="js/app.js"></script>
     
 </body>
