--- a/week 12/landing page/index.html
+++ b/week 12/landing page/index.html
@@ -1,23 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&display=swap" rel="stylesheet">
+    <h1>arsham's land page</h1>
+    <script src="https://kit.fontawesome.com/64b399a63b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <p>my projects</p>
     <div class="container">
-        <a href="https://arshamsheikhakabri.github.io/web-dev-class/all/cournometr/">cronometer</a>
-        <a href="https://arshamsheikhakabri.github.io/web-dev-class/all/RPS/">rock paper scissors</a>
-        <a href="https://arshamsheikhakabri.github.io/web-dev-class/all/weight%20converter/">weight converter</a>
-        <a href="https://arshamsheikhakabri.github.io/web-dev-class/all/joke/">jokes</a>
-        <a href="https://arshamsheikhakabri.github.io/web-dev-class/all/temp%20converter/">temp converter</a>
-        <a href="https://arshamsheikhakabri.github.io/web-dev-class/all/animal/">animals</a>
-        <a href="https://arshamsheikhakabri.github.io/web-dev-class/all/my%20site/">my site</a>
-        <a href="https://arshamsheikhakabri.github.io/web-dev-class/all/clock/">sclock</a>
-
+        <div class="a">
+            <form method="get" action="https://arshamsheikhakabri.github.io/web-dev-class/all/cournometr/">
+                <button type="submit">cronometer</button>
+            </form>
+        </div>
+        <div class="h">
+            <form method="get" action="https://arshamsheikhakabri.github.io/web-dev-class/all/RPS/">
+                <button type="submit">rock paper scissors</button>
+            </form>
+        </div>
+        <div class="b">
+            <form method="get" action="https://arshamsheikhakabri.github.io/web-dev-class/all/weight%20converter/">
+                <button type="submit">weight converter</button>
+            </form>
+        </div>
+        <div class="c">
+            <form method="get" action="https://arshamsheikhakabri.github.io/web-dev-class/all/joke/">
+                <button type="submit">jokes</button>
+            </form>
+        </div>
+        <div class="d">
+            <form method="get" action="https://arshamsheikhakabri.github.io/web-dev-class/all/temp%20converter/">
+                <button type="submit">temp converter</button>
+            </form>
+        </div>
+        <div class="e">
+            <form method="get" action="https://arshamsheikhakabri.github.io/web-dev-class/all/animal/">
+                <button type="submit">snakes</button>
+            </form>
+        </div>
+        <div class="f">
+            <form method="get" action="https://arshamsheikhakabri.github.io/web-dev-class/all/my%20site/">
+                <button type="submit">my site</button>
+            </form>
+        </div>
+        <div class="g">
+            <form method="get" action="https://arshamsheikhakabri.github.io/web-dev-class/all/clock/">
+                <button type="submit">clock</button>
+            </form>
+        </div>
     </div>
-    
 </body>
+<FOOter>
+    <section>
+        <ul class="icon-list">
+          <li class="icon-item">
+            <a href="https://instagram.com/arsham._.sh_?utm_medium=copy_link" class="icon-link"><i class="fab fa-instagram"></i></a>
+          </li>
+          <li class="icon-item">
+            <a href="#" class="icon-link"><i class="fab fa-facebook-f"></i></a>
+          </li>
+          <li class="icon-item">
+            <a href="#" class="icon-link"><i class="fab fa-dribbble"></i></a>
+          </li>
+          <li class="icon-item">
+            <a href="#" class="icon-link"><i class="fab fa-youtube"></i></a>
+          </li>
+          <li class="icon-item">
+            <a href="#" class="icon-link"><i class="fab fa-linkedin-in"></i></a>
+          </li>    
+        </ul>
+      </section>
+</FOOter>
 </html>
